[package]
name = "dsp4sdr"
description = "Rust SDR DSP functionality"
version = "0.7.1"
edition = "2024"
authors = ["Adam Greig <adam@adamgreig.com>"]
homepage = "https://github.com/adamgreig/sdr-rs"
repository = "https://github.com/adamgreig/sdr-rs"
readme = "README.md"
keywords = ["sdr", "dsp"]
license = "MIT"

[dependencies]
num = "0.4"
